[package]
name = "slab_allocator"
version = "0.2.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]
license = "MIT"

description = "Slab allocator for no_std systems. Uses multiple slabs with blocks of different sizes and makes a linked list from free blocks"
keywords = ["slab", "allocator", "no_std", "heap", "kernel"]

repository = "https://github.com/weclaw1/slab_allocator"

[dependencies]
spin = "0.4.6"
