[package]
name = "slab_allocator"
version = "0.4.0"
authors = ["Robert Węcławski <r.weclawski@gmail.com>", "Vinay Chandra Dommeti <github@vinay.vc>"]
license = "MIT"

description = "Slab allocator for no_std systems. Uses multiple slabs with blocks of different sizes and a linked list for blocks larger than 4096 bytes"
keywords = ["slab", "allocator", "no_std", "heap", "kernel"]

repository = "https://github.com/weclaw1/slab_allocator"

[dependencies]
linked_list_allocator = "0.8.11"
spin = "0.7.1"
